# openda

./: .git-blame-ignore-revs  .gitignore  appveyor.yml  buildDist.bat  ensureVenv.py  install_visual_studio_22.ps1  requirements.txt  sconstruct  sconstruct.back
.github/: CODEOWNERS  CONTRIBUTING.md
.github/workflows/: ci.yml  kernal-build.yml  test.yml
appveyor/scripts/: decryptFilesForSigning.ps1  setSconsArgs.ps1
appx/: manifest.xml.subst
buildappx_storeSubmission/: sconscript
include/: espeak.md  readme.md
include/nsis/: .gitignore  readme.md
include/nvda_dmp/: README.md  nvda_dmp.py
kernel/: Cargo.toml  pyproject.toml
kernel/src/: core.rs  external.rs  lib.rs  speech.rs  ui.rs
miscDeps/: readme.md
nvdaHelper/: archBuild_sconscript  readme.md
nvdaHelper/UIARemote/: UIARemote.cpp  remoteLog.h  sconscript
nvdaHelper/espeak/: sconscript
nvdaHelper/liblouis/: sconscript
nvdaHelper/local/: beeps.cpp  nvdaHelperLocal.def  nvdaHelperLocal.h
nvdaHelper/localWin10/: sconscript
nvdaHelper/microsoft-ui-uiautomation/: sconscript
projectDocs/community/: readme.md  releaseProcess.md
projectDocs/dev/: codingStandards.md  contributing.md  createDevEnvironment.md  githubPullRequestTemplateExplanationAndExamples.md  readme.md  userGuideStandards.md
source/: bdDetect.py  braille.py  brailleTables.py  buildVersion.py  core.py  diffHandler.py  editableText.py  eventHandler.py  globalCommands.py  mouseHandler.py  nvda.pyw  nvwave.py  pythonConsole.py  updateCheck.py  winVersion.py
source/gui/: __init__.py  (+4 more)
user_docs/: keyCommandsDoc.py  styles.css
(+313 files in other folders)
