[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "kernel"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.0", features = ["auto-initialize", "generate-import-lib"] }
