[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "kernel"
crate-type = ["cdylib"]

[dependencies]
actix-web = "4.9.0"
pyo3 = { version = "0.22.0", features = ["auto-initialize", "generate-import-lib"] }
tokio = {version="1.40.0", features=["full"]}
